# ChangeLog for dev-games/ggz-client-libs
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-games/ggz-client-libs/ChangeLog,v 1.30 2009/04/05 15:15:23 armin76 Exp $

  05 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  Add ~arm

  01 Feb 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +files/ggz-client-libs-0.0.14.1-destdir.patch,
  ggz-client-libs-0.0.14.1.ebuild:
  add patch from Michael Edenfield to apply the DESTDIR string correctly (bug
  #237607)

  13 Nov 2008; Brent Baude <ranger@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  Marking ggz-client-libs-0.0.14.1 ppc64 stable for bug 236971

  28 Oct 2008; Brent Baude <ranger@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  Marking ggz-client-libs-0.0.14.1 ~ppc64 for gnome

  25 Sep 2008; Jeroen Roovers <jer@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  Stable for HPPA (bug #236971).

  10 Sep 2008; Jeroen Roovers <jer@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  Marked ~hppa too.

  15 Jun 2008; Raúl Porcel <armin76@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  alpha/ia64/sparc/x86 stable wrt #226019

  14 Jun 2008; nixnut <nixnut@gentoo.org> ggz-client-libs-0.0.14.1.ebuild:
  Stable on ppc wrt bug 226019

  05 May 2008; Raúl Porcel <armin76@gentoo.org> ChangeLog:
  Add ~alpha/~ia64 wrt #218794

  26 Mar 2008; Samuli Suominen <drac@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  amd64 stable wrt #214349

*ggz-client-libs-0.0.14.1 (18 Feb 2008)

  18 Feb 2008; Tristan Heaven <nyhm@gentoo.org>
  +ggz-client-libs-0.0.14.1.ebuild:
  Version bump

  15 Nov 2007; Samuli Suominen <drac@gentoo.org>
  ggz-client-libs-0.0.14.ebuild:
  Keyword ~amd64.

*ggz-client-libs-0.0.14 (22 Feb 2007)

  22 Feb 2007; Tristan Heaven <nyhm@gentoo.org>
  +ggz-client-libs-0.0.14.ebuild:
  Version bump

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.
