@@ -1,5 +1,5 @@
 AUX ggz-client-libs-0.0.14.1-destdir.patch 1136 RMD160 b0fd34d9113ea17d6e7d4e57b7d42e75b1fcf65a SHA1 bcc7bfe3c8fc873646d83c05108f673dc5073389 SHA256 609cc014c6964034e0cdf1d4245ae6383e4aae0d41273a266ef6570d2badfc27
 DIST ggz-client-libs-0.0.14.1.tar.gz 614117 RMD160 b7a0e3b63261b3f8ff725eae212ecf0001c46fa8 SHA1 1328095d0f7e3415e1748208438127f0ee67a573 SHA256 0a7bec1a381a450f650890b36253893df0001873ba1f414573a4247298107680
-EBUILD ggz-client-libs-0.0.14.1.ebuild 576 RMD160 b9306b9ab424508826eef3b90a2312f79f43ff0a SHA1 847d75ee50f34b1811df0afcdd2dd98d9b7c6841 SHA256 a04472a2db24ab5a41d559f82b4b2091a0fc00ab442c0a95cb3eabe364e740a7
-MISC ChangeLog 4205 RMD160 908133222633d402539709c29fdbf7c0f9373d93 SHA1 986d440817a585276bdc0244f223b3eaf62f16d4 SHA256 b45d6fea9d6276aa8e1172678fc17a12389af8c07cd8de27e5bfc32804794416
+EBUILD ggz-client-libs-0.0.14.1.ebuild 570 RMD160 ec07d77d638b441193bb9eb442be080679b3b7bf SHA1 68f5845773df2d96cd10b6a89c7963c3c785cf67 SHA256 591ba2d1cbe2354f07d8a882f698b0770249141460017371d9bb5721f12fdb2f
+MISC ChangeLog 4316 RMD160 e7e6dfc1c0356b1e88420ae9dc03278c2d5c0d32 SHA1 aa972629aea675a98c7350dc45e599c92269c308 SHA256 2f4c6bac586374a9e23336872b2e8f59db58d51e7e8139fef5d568bfe2d994cd
 MISC metadata.xml 428 RMD160 742fed788e2947ca9ba85b5d9c234778fda310fc SHA1 c003bb872b0ba384f9e45d56431f149dd94c649b SHA256 ca242ceeaf7a146b8ce0ad3ce0a7f1761edaf7324b735a2e910619ad9c6d29af
