@@ -1,6 +1,10 @@
 # ChangeLog for dev-games/ggz-client-libs
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-games/ggz-client-libs/ChangeLog,v 1.30 2009/04/05 15:15:23 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-games/ggz-client-libs/ChangeLog,v 1.31 2009/04/05 20:50:55 loki_val Exp $
+
+  05 Apr 2009; Peter Alfredsen <loki_val@gentoo.org>
+  ggz-client-libs-0.0.14.1.ebuild:
+  Fix keyword mixup.
 
   05 Apr 2009; Raúl Porcel <armin76@gentoo.org>
   ggz-client-libs-0.0.14.1.ebuild:
